major updates, almost done

--- a/haskell-qubes-i3-status.cabal
+++ b/haskell-qubes-i3-status.cabal
@@ -71,6 +71,8 @@ executable haskell-qubes-i3-status
                     , process
                     , time
                     , filepath
+                    , split
+                    , containers
 
     -- Directories containing source files.
     hs-source-dirs:   app
